# gpt-discord-bot

./: .env.example  Cargo.toml  system_prompt.txt
src/: main.rs
