[package]
name = "gpt-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
currency_rs = "1.3.0"
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
poise = "0.6.1"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.77"
lazy_static = "1.4.0"
tiktoken-rs = "0.5.8"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.10.2"
snmalloc-rs = "0.3.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
